--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-register")
 
 find_package(Eigen3 REQUIRED NO_MODULE)
+find_package(Boost REQUIRED)
 
 add_subdirectory(Icarus)
 
@@ -10,6 +11,7 @@ add_library(main
     main.cpp
     MPU9255.cpp
     AK8963.cpp
+    BMP180.cpp
 )
 
-target_link_libraries(main Icarus)
+target_link_libraries(main PRIVATE Icarus)
